[package]
name = "light-zhihu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = "0.6.12"
chrono = { version = "0.4.24", features = ["serde"] }
http = "0.2.9"
lol_html = "0.3.3"
maud = { git = "https://github.com/lambda-fairy/maud", features = ["axum"] }
once_cell = "1.17.1"
regex = "1.7.3"
reqwest = { version = "0.11.16", features = ["json", "brotli", "gzip"] }
serde = { version = "1.0.159", features = ["derive"] }
serde-this-or-that = "0.4.2"
serde_json = "1.0.95"
serde_path_to_error = "0.1.11"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
urlencoding = "2.1.2"
